# slash

./: .gitignore  README.md  lint.sh  pyproject.toml
.github/workflows/: deploy.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/examples/: events.rst  hello.rst  https.rst  reactive.rst
docs/source/modules/: slash.basic.rst  slash.core.rst  slash.events.rst  slash.html.rst  slash.js.rst  slash.layout.rst  slash.reactive.rst  slash.rst
docs/source/static/: custom.css
example/: dialog.py  figure.py  image.py  line_fit.py  main.py  main_old.py  progress.py  select.py  svg.py  table.py  tabs.py  todolist.py
example/tests/: axes.py  colors.py  data.py  data_table.py  dialog.py  figure.py  image.py  input.py  js.py  log.py  pre.py  progress.py  select.py  table.py
examples/: dashboard.py  endpoints.py  hello_world.py  history.py  https.py  line_fit.py  main.py  routes.py  todolist.py
examples/tests/: axes.py  colors.py  data_table.py  details.py  dom.py  download.py  form.py  image.py  input.py  js.py  log.py  markdown.py  session.py  storage.py  svg.py  tabs.py  upload.py
public/: index.html
public/css/: figure.css  fonts.css  slash.css  theme.css
public/img/: icons.xcf
public/js/: figure.js  script.js  utils.js
public/ts/: figure.ts  script.ts  tsconfig.json  utils.ts
slash/: README.md  pyproject.toml
slash/src/slash/: __init__.py  _app.py  _logging.py  _message.py  _server.py  _utils.py  app.py  client.py  core.py  events.py  figure.py  html.py  image.py  js.py  jsfunction.py  layout.py  logging.py  message.py  progress.py  select.py  server.py  table.py  tabs.py  utils.py
slash/src/slash/basic/: __init__.py  axes.py  data.py  figure.py  markdown.py  pie.py  progress.py  radio.py  svg.py  table.py  tabs.py
slash/src/slash/elem/: __init__.py  elem.py
src/slash/: __init__.py  _app.py  _config.py  _logging.py  _message.py  _pages.py  _server.py  _utils.py  core.py  events.py  html.py  js.py  layout.py  reactive.py
src/slash/basic/: __init__.py  _axes.py  _checkbox.py  _confirm.py  _data_table.py  _download.py  _icon.py  _latex.py  _loading.py  _markdown.py  _pie.py  _progress.py  _radio.py  _svg.py  _tabs.py  _tooltip.py  _upload.py  axes.py  checkbox.py  data_table.py  download.py  pie.py  radio.py  tabs.py  upload.py
src/slash/public/: 404.html  index.html
src/slash/public/css/: fonts.css  slash.css  theme.css
src/slash/public/img/: favicon.xcf
src/slash/public/js/: script.js
src/slash/public/ts/: script.ts  utils.ts
tests/: main.py
tests/tests/: axes.py  colors.py  confirm.py  data_table.py  details.py  dialog.py  dom.py  download.py  errors.py  form.py  history.py  html.py  icons.py  image.py  input.py  js.py  latex.py  loading.py  log.py  markdown.py  pre.py  progress.py  reactive.py  select.py  session.py  storage.py  svg.py  tabs.py  tinker.py  tooltip.py  upload.py
