[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slash"
version = "0.0.1"
description = "Python dashboard framework"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["slash", "dashboard", "framework"]
authors = [{ name = "Jesse Vogel", email = "jesse.t.vogel@gmail.com" }]
maintainers = [{ name = "Jesse Vogel", email = "jesse.t.vogel@gmail.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["aiohttp", "markdown"]

[project.optional-dependencies]
dev = ["ruff", "sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme"]

[project.urls]
"Homepage" = "https://github.com/jessetvogel/slash"
"Bug Reports" = "https://github.com/jessetvogel/slash/issues"
"Source" = "https://github.com/jessetvogel/slash"

[project.scripts]

[tool.setuptools]
package-dir = { "" = "src" }
package-data = { slash = ["public/**/*"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 120
