[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slash"
version = "0.0.1"
description = "Python web framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["slash", "web", "framework"]
authors = [{ name = "Jesse Vogel", email = "jesse.t.vogel@gmail.com" }]
maintainers = [{ name = "Jesse Vogel", email = "jesse.t.vogel@gmail.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]
dependencies = ["aiohttp", "markdown"]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "types-markdown",
    "sphinx~=8.2.3",            # update when `sphinx_rtd_theme` supports Sphinx 9
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]
test = ["numpy", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/jessetvogel/slash"
"Bug Reports" = "https://github.com/jessetvogel/slash/issues"
"Source" = "https://github.com/jessetvogel/slash"

[project.scripts]

[tool.setuptools]
package-dir = { "" = "src" }
package-data = { slash = ["public/**/*"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 120
